:sparkles: #57 - Ajout de la destruction des bricks par étapes (bug sur les bricks de bas et droite)